--- a/src/main/webapp/views/index.html
+++ b/src/main/webapp/views/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Book Api</title>
 </head>
 <body>
-<h1 style="align-content: center">HEllo World</h1>
+<h1>Home Page</h1>
 </body>
 </html>
